--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
-      <h1>Banco Pichincha</h1>
-      <h6>Banco Pichincha</h6>
+      <h1 style="color: red;">Banco Pichincha</h1>
+      <h6 style="color:yellow">Banco Pichincha</h6>
       <img src="img/cabecera.png" alt="No se pudo cargar la imagen" />
     </header>
     <nav>
